env/code_53ebeb093a5b9/stderr.txt
  File "main.py", line 16
    break i += 2 
          ^
SyntaxError: invalid syntax
